<resources>
    <string name="app_name">SocioBot</string>
    <string name="stringAppTitle">SocioBot</string>
    <string name="stringUsername">Username</string>
    <string name="stringPassword">Password</string>
    <string name="stringSignIn">Sign In</string>
    <string name="facebook_app_id">194454227560359</string>
    <string name="twitter_button">Sign in with Twitter</string>
    <string name="stringResetPassword">&lt;a href="">Reset Password&lt;/a></string>
    <string name="stringSignUp">&lt;u>Sign Up&lt;/u></string>
    <string name="stringNewHere">New here?</string>
    <string name="stringImageLabel">Touch here to change the profile picture</string>
    <string name="stringFirstName">First Name</string>
    <string name="stringLastName">Last Name</string>
    <string name="stringGender">Gender</string>
    <string name="stringMale">Male</string>
    <string name="stringFemale">Female</string>
    <string name="stringDOB">DOB(mm/dd/yyyy)</string>
    <string name="stringPhoneNumber">Phone Number</string>
    <string name="stringAddress">Address</string>
    <string name="stringSwitchPublicProfile">Public Profile?</string>
    <string name="stringSave">Save</string>
    <string name="stringEmail">E-mail Address</string>
    <string name="stringConfirmPassword">Confirm Password</string>
    <string name="stringLogout">Logout</string>
    <string name="stringMyProfile">My Profile</string>
    <string name="stringPrivate">Private</string>
    <string name="stringPublic">Public</string>
    <string name="stringAllowNotifications">Push Notifications</string>
    <string name="stringTo">To</string>
    <string name="stringRecipientName">Enter Recipient(s) Name</string>
    <string name="stringTypeMessage">Write a Message</string>
    <string name="stringMessage">Message</string>
    <string name="stringSend">Send</string>
    <string name="stringCancel">Cancel</string>
    <string name="stringRemainingChars">chars left)</string>
    <string name="stringBracket">(</string>
    <string name="stringSearch">Search</string>
    <string name="stringSearchHint">Search for other users</string>
    <string name="stringNoMessages">No Messages to show</string>
    <string name="stringAlbumName">Album Name</string>
    <string name="stringAlbumDescription">Album Description</string>
    <string name="stringAlbumPrivacy">Set as a Public album?</string>
    <string name="stringAllowedUsers">Who can access this album?</string>
    <string name="stringNoAlbums">No Albums to show</string>
    <string name="stringEditAlbum">Edit Album</string>
    <string name="stringDeleteAlbum">Delete Album</string>
    <string name="stringCreatedBy">Created By :</string>
    <string name="stringDescription">Description :</string>
    <string name="stringPrivacy">Privacy :</string>
    <string name="stringPhotosInTheAlbum">Photos in the album</string>
    <string name="stringAddPhotos">Add Photos</string>
    <string name="stringSharedWith">Shared with :</string>
    <string name="stringExistingPhotos">Photos in the Album</string>
    <string name="stringPendingApprovals">Pending Approvals</string>
    <string name="stringAddedBy">Added By</string>
    <string name="stringNoPendingApprovals">No Pending Approvals</string>
    <string name="signup_imageView">imageView_signUp</string>
</resources>
