<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aravindharaj.sociobot.EditProfileActivity"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/custom_frame_layout1"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageViewImage1"
            android:layout_gravity="center"
            android:src="@drawable/default_user"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/stringImageLabel"
            android:id="@+id/textViewEditLabel1"
            android:layout_gravity="center"
            android:gravity="center"
            android:alpha="0.5"
            android:textColor="#000000" />

    </FrameLayout>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="283dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextFirstName1"
                    android:hint="@string/stringFirstName"
                    android:layout_weight="1"
                    android:singleLine="true" />

            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextLastName1"
                android:layout_weight="1"
                android:hint="@string/stringLastName"
                android:singleLine="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/editTextEmail1"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:hint="@string/stringEmail" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/stringGender"
                    android:id="@+id/textViewGender1"
                    android:layout_weight="0.81"
                    android:gravity="center"
                    android:layout_marginTop="2dp" />

                <RadioGroup
                    android:id="@+id/radioGroup1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stringMale"
                        android:id="@+id/radioButtonMale1"
                        android:checked="true" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stringFemale"
                        android:id="@+id/radioButtonFemale1"
                        android:checked="false" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="283dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/editTextDOB1"
                    android:layout_weight="1"
                    android:hint="@string/stringDOB" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:id="@+id/editTextPhoneNumber1"
                    android:hint="@string/stringPhoneNumber"
                    android:maxLength="10" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:divider="@drawable/mydivider"
        android:showDividers="middle"
        >

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringSwitchPublicProfile"
            android:id="@+id/switchPublicProfile1"
            android:layout_gravity="center"
            android:checked="true"
            android:textOff="@string/stringPrivate"
            android:textOn="@string/stringPublic"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringAllowNotifications"
            android:id="@+id/checkBoxNotifications1"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:checked="true" />
    </LinearLayout>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="7dp"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stringSave"
            android:id="@+id/buttonSave1"
            android:textColor="@color/colorText"
            android:background="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</LinearLayout>
