<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aravindharaj.sociobot.ComposeMessage"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/stringTo"
            android:id="@+id/textViewTo"
            android:layout_weight="0.24"
            android:gravity="left|center"
            android:textStyle="bold" />

        <com.example.aravindharaj.sociobot.ContactsCompletionView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextRecipient"
            android:layout_weight="0.24"
            android:hint="@string/stringRecipientName"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/stringMessage"
                android:id="@+id/textViewMessage"
                android:textStyle="bold"
                android:gravity="left" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/stringBracket"
                android:id="@+id/textViewBracket"
                android:layout_marginLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="140"
                android:id="@+id/textViewCount" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/stringRemainingChars"
                android:id="@+id/textViewRemainingChars"
                android:layout_marginLeft="5dp" />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editTextMessage"
            android:hint="@string/stringTypeMessage"
            android:layout_gravity="center"
            android:maxLength="140" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:divider="@drawable/mydivider"
            android:showDividers="middle">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/stringSend"
                android:id="@+id/buttonSend"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorText" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/stringCancel"
                android:id="@+id/buttonCancel"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorText" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
